    This change results in using the config files to find the module name from
    the module file name when the first argument of the use_module/2 directive
    is a compound term (as usual when using library notation).

    Updated the definition of the pseudo-object "user" in order to virtually
    contain the definition of all Prolog built-in predicates.

    Corrected a bug in the Logtalk compiler where a broken term_expansion/2
    definition expanding a term to a variable would succeed instead of
    throwing an error.

    Optimized meta-calls when using closures wrapped in the {}/1 control
    construct. Removed redundant check for debugging mode when executing
    meta-calls.

    Corrected a potential bug in the Logtalk runtime when updating the meta-
    call context for lambda expressions that could result in losing part of
    the context.

    Added support for the predicate renaming operator as/2 found on SWI-Prolog
    and YAP when parsing use_module/2 directives.

    Updated the SWI-Prolog hooks file, "configs/swihook.pl", in order to avoid
    intercepting Prolog ensure_loaded/1 calls by the prolog_load_file/2 hook
    predicate. This change solves issues when calling Prolog module library
    predicates from within Logtalk objects and categories. Thanks to Parker
    Jones for the bug report.

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files in
    order to preprocess the use_module/2 directive, converting the module file
    name into the module name.

    Updated the SWI-Prolog and YAP config files in order to preprocess the
    reexport/2 module directive, converting the module file name into the
    module name.

    Updated the SWI-Prolog config file with more robust and fast code for
    preprocessing module directives when the modules are already loaded.
    Also added support for the new use_foreign_library/1-2 proprietary
    directives.
